--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -4,17 +4,16 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --host",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"bootstrap": "^5.3.3",
 		"moment": "^2.30.1",
 		"react": "^18.2.0",
-		"react-bootstrap": "^2.10.1",
 		"react-dom": "^18.2.0",
+		"react-icons": "^5.0.1",
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
